@@ -17,7 +17,6 @@
     </properties>
 
     <dependencies>
-
         <!-- Serialización / deserialización JSON -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -25,20 +24,12 @@
             <version>2.17.1</version>
         </dependency>
 
-        <!-- Lombok: genera getters/setters/constructores automáticamente -->
+        <!--  genera getters/setters/constructores automáticamente -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.40</version>
             <scope>provided</scope>
-        </dependency>
-
-        <!-- JUnit 5 para pruebas unitarias -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.10.2</version>
-            <scope>test</scope>
         </dependency>
 
     </dependencies>
@@ -60,16 +51,6 @@
                             <version>1.18.42</version>
                         </path>
                     </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-
-            <!-- Runner de pruebas -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
